<resources>
    <string name="app_name">My Khatamul Qur\'an Beta</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_start_offline">StartOffline</string>
    <string name="title_activity_login_online">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="buat_akun">Buat Akun</string>
    <string name="email">Email</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="password">Password</string>
    <string name="perempuan">Perempuan</string>
    <string name="username">Username</string>
    <string name="usia">Usia</string>
    <string name="go_offline">Go Offline</string>
    <string name="title_activity_quran">QuranActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="page1">koala1</string>
    <string name="page2">koala2</string>
    <string name="page3">koala3</string>
    <string name="page4">koala4</string>
    <string name="page5">koala5</string>
    <string name="page6">koala6</string>
    <string name="page7">koala7</string>
    <string name="page8">koala8</string>
    <string name="page9">koala9</string>
    <string name="page10">koala10</string>

    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_bookmarks_remove">Remove</string>


    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="button">Button</string>
    <string name="title_activity_profil_fragment">profilFragment</string>

</resources>
